GNOME Bugzilla – Bug 675437
evolution plugin: fix undefined symbol
Last modified: 2012-05-04 15:42:01 UTC
Created attachment 213435 [details] [review] add missing header Hi. There seem to be a missing header in the evolution plugin: liborg-freedesktop-Tracker-evolution-plugin.so: undefined symbol 'E_MAIL_BACKEND' liborg-freedesktop-Tracker-evolution-plugin.so': Cannot load specified object E_MAIL_BACKEND is defined in mail/e-mail-backend.h (checked evolution 2.32.3 and evolution 3.4.1). Would that be alright to push this?
Comment on attachment 213435 [details] [review] add missing header The patch looks good, thank you, please go ahead and commit this to master. I can cherry-pick it when I do the next release.
*** Bug 675413 has been marked as a duplicate of this bug. ***
Thank you Martyn. It's in: 36ae98cd502d2ba8dc36ff281ef1b0258f61bd8c