evolution plugin: include missing header

To prevent liborg-freedesktop-Tracker-evolution-plugin.so:
undefined symbol 'E_MAIL_BACKEND'
liborg-freedesktop-Tracker-evolution-plugin.so':
Cannot load specified object

https://bugzilla.gnome.org/show_bug.cgi?id=675437